--- a/index.html
+++ b/index.html
@@ -166,6 +166,23 @@
       <img src="candy-hero.jpg" alt="Candy Massage Montreal">
     </div>
   </header>
+<div class="glass" style="margin-top:16px;padding:18px;">
+  <h2 style="margin:0 0 12px;font-family:'Playfair Display';font-size:26px;">
+    Personal Details
+  </h2>
+
+  <div style="
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    gap:12px;
+    font-size:16px;
+  ">
+    <div><b>Gender:</b><br>Female</div>
+    <div><b>Languages:</b><br>English</div>
+    <div><b>Service For:</b><br>Men, Women, Couples</div>
+    <div><b>Location:</b><br>Montreal</div>
+  </div>
+</div>
 
   <!-- PRICING -->
   <section>
