--- a/index.html
+++ b/index.html
@@ -132,6 +132,92 @@
     @media(max-width:500px){
       .prices{grid-template-columns:1fr}
     }
+    /* ===== Gallery with captions ===== */
+.gallery-grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:14px;
+}
+@media(max-width:900px){ .gallery-grid{grid-template-columns:repeat(2,1fr);} }
+@media(max-width:520px){ .gallery-grid{grid-template-columns:1fr;} }
+
+.gallery-item{
+  overflow:hidden;
+  border-radius:16px;
+  border:1px solid var(--stroke);
+  background:rgba(255,255,255,.06);
+  cursor:pointer;
+}
+.gallery-item img{
+  width:100%;
+  height:280px;
+  object-fit:cover;
+  display:block;
+  transition:transform .25s ease;
+}
+.gallery-item:hover img{ transform:scale(1.03); }
+
+.gallery-caption{
+  padding:12px 12px 14px;
+  color:var(--muted);
+  font-size:14px;
+  line-height:1.5;
+}
+.gallery-caption b{
+  color:var(--text);
+  display:block;
+  margin-bottom:4px;
+}
+
+/* ===== Lightbox (click to full screen) ===== */
+.lightbox{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.78);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  padding:18px;
+  z-index:1000;
+}
+.lightbox.open{display:flex;}
+.lightbox-card{
+  max-width:min(1100px,95vw);
+  max-height:90vh;
+}
+.lightbox-img{
+  width:100%;
+  max-height:78vh;
+  object-fit:contain;
+  border-radius:18px;
+  border:1px solid rgba(255,255,255,.12);
+  display:block;
+  background:rgba(255,255,255,.04);
+}
+.lightbox-meta{
+  margin-top:10px;
+  color:var(--muted);
+  font-size:14px;
+  line-height:1.5;
+}
+.lightbox-meta b{color:var(--text)}
+.lightbox-close{
+  position:fixed;
+  top:16px;
+  right:16px;
+  width:44px;
+  height:44px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.20);
+  background:rgba(255,255,255,.08);
+  color:var(--text);
+  font-size:22px;
+  cursor:pointer;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
   </style>
 </head>
 
@@ -213,6 +299,124 @@
       </div>
     </div>
   </section>
+<section id="quotes">
+  <h2 style="margin-top:40px;">Moments of Relaxation</h2>
+
+  <div style="
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+    gap:18px;
+    margin-top:20px;
+  ">
+
+    <div class="glass">
+      <img src="quote-1.jpg" style="width:100%;border-radius:14px;">
+      <p style="padding:14px;">
+        <b><i style="color:#ff9ac1;">
+          “Sometimes the most productive thing you can do is relax.”
+        </i></b>
+      </p>
+    </div>
+
+    <div class="glass">
+      <img src="quote-2.jpg" style="width:100%;border-radius:14px;">
+      <p style="padding:14px;">
+        <b><i style="color:#9ad0ff;">
+          “Tension is who you think you should be. Relaxation is who you are.”
+        </i></b>
+      </p>
+    </div>
+
+    <div class="glass">
+      <img src="quote-3.jpg" style="width:100%;border-radius:14px;">
+      <p style="padding:14px;">
+        <b><i style="color:#b6ffb0;">
+          “Your calm mind is the ultimate weapon against stress.”
+        </i></b>
+      </p>
+    </div>
+
+    <div class="glass">
+      <img src="quote-4.jpg" style="width:100%;border-radius:14px;">
+      <p style="padding:14px;">
+        <b><i style="color:#ffd59a;">
+          “Nothing brings peace like a quiet spa and a silent phone.”
+        </i></b>
+      </p>
+    </div>
+
+    <div class="glass">
+      <img src="quote-5.jpg" style="width:100%;border-radius:14px;">
+      <p style="padding:14px;">
+        <b><i style="color:#d6b3ff;">
+          “Let yourself rest. It’s part of the healing.”
+        </i></b>
+      </p>
+    </div>
+
+  </div>
+</section>
+<section id="gallery">
+  <h2>Wellness Gallery</h2>
+  <p class="lead" style="max-width:70ch">
+    A calm, comfortable environment focused on relaxation, recovery, and stress relief.
+    Click any photo to view it full screen.
+  </p>
+
+  <div class="gallery-grid">
+    <div class="gallery-item" data-full="gallery-1.jpg" data-title="Relaxation Session" data-desc="A gentle, calming session designed to help you unwind and reset.">
+      <img src="gallery-1.jpg" alt="Relaxation Session">
+      <div class="gallery-caption"><b>Relaxation Session</b>Gentle techniques to reduce stress and help you feel refreshed.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-2.jpg" data-title="Stress Relief" data-desc="Ideal for busy days—slow pressure and soothing rhythm to quiet the mind.">
+      <img src="gallery-2.jpg" alt="Stress Relief">
+      <div class="gallery-caption"><b>Stress Relief</b>Slow, soothing strokes for mental calm and comfort.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-3.jpg" data-title="Comfort & Ambiance" data-desc="A clean, welcoming setting to help you fully relax and feel at ease.">
+      <img src="gallery-3.jpg" alt="Comfort & Ambiance">
+      <div class="gallery-caption"><b>Comfort & Ambiance</b>Warm lighting and a peaceful environment for your session.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-4.jpg" data-title="Aromatherapy Add-On" data-desc="A calming aroma experience paired with massage to enhance relaxation.">
+      <img src="gallery-4.jpg" alt="Aromatherapy Add-On">
+      <div class="gallery-caption"><b>Aromatherapy Add-On</b>Soft scents to support deeper relaxation.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-5.jpg" data-title="Massage Oils & Skin Comfort" data-desc="Premium oils and smooth techniques to promote comfort and relaxation.">
+      <img src="gallery-5.jpg" alt="Massage Oils & Comfort">
+      <div class="gallery-caption"><b>Massage Oils & Comfort</b>Comfort-focused approach with gentle, controlled pressure.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-6.jpg" data-title="Clean Setup" data-desc="A tidy, professional setup prepared for a relaxing, comfortable session.">
+      <img src="gallery-6.jpg" alt="Clean Setup">
+      <div class="gallery-caption"><b>Clean Setup</b>Professional wellness environment with attention to cleanliness.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-7.jpg" data-title="Warm Stone Relaxation" data-desc="Warmth-based relaxation to help loosen tight muscles and improve comfort.">
+      <img src="gallery-7.jpg" alt="Warm Stone Relaxation">
+      <div class="gallery-caption"><b>Warm Stone Relaxation</b>Heat-based comfort to ease tension.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-8.jpg" data-title="Neck & Shoulder Relief" data-desc="Focused care for neck and shoulder tightness from work, stress, or posture.">
+      <img src="gallery-8.jpg" alt="Neck & Shoulder Relief">
+      <div class="gallery-caption"><b>Neck & Shoulder Relief</b>Targeted techniques for upper-body tension.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-9.jpg" data-title="Leg & Foot Recovery" data-desc="Great for tired legs—supports circulation and reduces heaviness.">
+      <img src="gallery-9.jpg" alt="Leg & Foot Recovery">
+      <div class="gallery-caption"><b>Leg & Foot Recovery</b>Relief for tired legs and everyday fatigue.</div>
+    </div>
+
+    <div class="gallery-item" data-full="gallery-10.jpg" data-title="Mobility & Stretch Support" data-desc="Helps with stiffness and improves comfort through gentle mobility support.">
+      <img src="gallery-10.jpg" alt="Mobility & Stretch Support">
+      <div class="gallery-caption"><b>Mobility & Stretch Support</b>Helps reduce stiffness and improve ease of movement.</div>
+    </div>
+
+
+  </div>
+</section>
 
   <!-- FOOTER -->
   <footer class="glass">
@@ -220,9 +424,51 @@
   </footer>
 
 </div>
+<div class="lightbox" id="lightbox">
+  <button class="lightbox-close" id="lightboxClose" aria-label="Close">×</button>
+  <div class="lightbox-card">
+    <img class="lightbox-img" id="lightboxImg" src="" alt="Full size">
+    <div class="lightbox-meta" id="lightboxMeta"></div>
+  </div>
+</div>
 
 <script>
+  <script>
   document.getElementById("year").textContent = new Date().getFullYear();
+
+  // ===== Lightbox logic =====
+  const lightbox = document.getElementById("lightbox");
+  const lightboxImg = document.getElementById("lightboxImg");
+  const lightboxMeta = document.getElementById("lightboxMeta");
+  const lightboxClose = document.getElementById("lightboxClose");
+
+  document.querySelectorAll(".gallery-item").forEach(item => {
+    item.addEventListener("click", () => {
+      const full = item.getAttribute("data-full");
+      const title = item.getAttribute("data-title") || "";
+      const desc  = item.getAttribute("data-desc") || "";
+
+      lightboxImg.src = full;
+      lightboxMeta.innerHTML = `<b>${title}</b><br>${desc}`;
+      lightbox.classList.add("open");
+    });
+  });
+
+  function closeLightbox(){
+    lightbox.classList.remove("open");
+    lightboxImg.src = "";
+  }
+
+  lightboxClose.addEventListener("click", closeLightbox);
+  lightbox.addEventListener("click", (e) => {
+    if(e.target === lightbox) closeLightbox();
+  });
+
+  document.addEventListener("keydown", (e) => {
+    if(e.key === "Escape") closeLightbox();
+  });
+</script>
+
 </script>
 
 </body>
